--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -1,6 +1,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js">
 </script>
-<%= link_to "投稿する",new_champion_path,class: "send_btn ml-3 mt-3" %>
+<div class="main-content-btn">
+  <%= link_to "投稿する",new_champion_path,class: "send_btn ml-3 mt-3" %>
+  <%= link_to "予想一覧へ戻る","/tournaments/#{@category.id}/watch_fcs",class: "return-top mt-3" %>
+</div>
 <div class="text-format">
   <%= @category.name %>
 </div>
