--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -4,7 +4,7 @@
       <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
     <% end %>
     <% unless current_page?(root_path)%>
-      <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-btn_watch" %>
+      <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-top" %>
     <%end%>
   </div>
   <%= link_to "優勝予想","/champions/#{@forecast.tournament_id}",class: "champ mt-3 mb-3" %>
