--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -23,6 +23,10 @@
           <% end %>
         <% end %>
       </div>
+      <%= form_with(url: search_forecasts_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
+        <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
+        <%= form.submit "検索", class: "search-btn" %>
+      <% end %>
     </div>
   </div>
   <div class="forecast-main">
