--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -5,35 +5,4 @@
     投稿した試合予想
   <% end %>
 </div>
-<% @forecasts.each do |forecast| %>
-  <div class="forecast mt-5">
-  <%= link_to forecast do %>
-    <div class="text-format mt-1 font-weight-normal">
-      <%= forecast.round%>
-    </div>
-    <div class="school-fcs">
-      <div class="win-school_fs">
-        <p>勝利予想<p>
-        <br>
-        <%= forecast.win_school.name %>
-      </div>
-      <div class="lose-school_fs">
-        <p>敗退予想<p>
-        <br>
-        <%= forecast.lose_school.name %>
-      </div>
-    </div>
-    <div class="fcs-image">
-      <i class="fa fa-balance-scale text-white"></i>
-    </div>
-    <div class="name">
-      <span>投稿者</span>
-      <%= forecast.user.nickname %>
-    </div>
-    <div class="tweets_at">
-      <%= forecast.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
-    </div>
-  </div>
-  <% end %>
-<% end %>
-<%= paginate @forecasts %>
+<%= render partial: "forecasts/list" %>
