--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -3,28 +3,4 @@
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
 <% end %>
-<% @tweets.each do |tweet|%>
-  <%= link_to tweet do %>
-  <div class="article mt-5">
-    <div class="article-title">
-      <%= tweet.school_a.name %>
-      vs
-      <%= tweet.school_b.name %>
-    </div>
-    <div class="article-image">
-      <i class="fa fa-baseball-ball text-white"></i>
-    </div>
-    <div class="sub-title">
-      <%= tweet.title_info %>
-    </div>
-    <div class="name">
-      <span>投稿者</span>
-      <%= tweet.user.nickname %>
-    </div>
-    <div class="tweets_at">
-      <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
-    </div>
-  </div>
-  <% end %>
-<% end %>
-<%= paginate @tweets %>
+<%= render partial: "list" %>
