テンプレート名変更

--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="analysis-main">
-    <%= render partial: "show"%>
+    <%= render partial: "analysis_show"%>
   </div>
 </div>
 <%= javascript_pack_tag 'tweet' %>
