--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="forecast-main">
-    <%= render partial: "forecasts"%>
+    <%= render partial: "forecast_show"%>
   </div>
 </div>
 <%= javascript_pack_tag 'tweet' %>
