--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -17,7 +17,7 @@
       <div class="text-format text-success mt-5 pt-5 mb-４">
         <%= @analysis_tournament.tournament.name%>
       </div>
-      <%= render partial: "analyses/show"%>
+      <%= render partial: "analyses/analysis_show"%>
     <% else %>
       <div class="text-center mt-5">投稿はありません</div>
     <% end %>
