--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -14,7 +14,7 @@
       <div class="text-format text-danger mt-1 pt-5 mb-4">
         <%= @forecast.tournament.name%>
       </div>
-      <%= render partial: "forecasts/forecasts"%>
+      <%= render partial: "forecasts/forecast_show"%>
     <% else %>
       <p class="text-center mt-5">投稿はありません<p>
     <% end %>
