--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@
  @import "./notification";
  @import "./tournament";
  @import "./follow";
- @import "./champion"
+ @import "./champion";
+ @import "./user"
 
 
