ユーザー一覧へのボタン

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -104,7 +104,6 @@
 
 @media screen and (min-width: 1200px) {
   .top-image {
-    
     &_one {
       top: 12%;
       left: 0;
@@ -167,7 +166,7 @@
   .top-title {
     font-size: 24px;
   }
-  .btn-cool-blues,.btn-green-moon,.btn-orange-moon {
+  .btn-cool-blues,.btn-green-moon,.btn-orange-moon,.btn-success {
     font-size: 15px;
   }
 }
