--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -7,6 +7,7 @@
   <% elsif @user.id == current_user.id || current_user.admin %>
     <%= link_to "プロフィール編集",edit_mypage_path(@user),class: "edit-article" %>
   <% end %>
+  <%= link_to "ユーザー一覧",users_path,class: "users-btn" %>
   <div class="myname mt-5">
     <h2><%= "#{@user.nickname}さんのプロフィール"%><h2>
   </div>
