--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -29,22 +29,20 @@
     <%= simple_format(@tweet.text)%>
   </div>
   <%# いいね %>
-  <div class="image">
-    <%= image_tag "#{@tweet.image}"%>
-    <% if current_user.already_liked?(@tweet)%>
-      <%= button_to tweet_like_path(@tweet),class: "good-after text-danger",method: :delete  do %>
-        <i class="fas fa-heart"></i><%= @tweet.likes.count %>
-      <% end %>
-    <% else %>
-      <%= button_to tweet_likes_path(@tweet),{class: "good mb-2"} do %>いいね
-        <i class="fas fa-heart"></i><%= @tweet.likes.count %>
-      <% end %>
+  <%= image_tag "#{@tweet.image}",width: "400",class: "image" %>
+  <% if current_user.already_liked?(@tweet)%>
+    <%= button_to tweet_like_path(@tweet),class: "good-after text-danger",method: :delete  do %>
+      <i class="fas fa-heart"></i><%= @tweet.likes.count %>
     <% end %>
-    <p>いいねをしたユーザー</p><br>
-    <% @tweet.liked_users.each do |user|%>
-      <%= link_to "#{user.nickname}","/mypages/#{user.id}" %><br>
+  <% else %>
+    <%= button_to tweet_likes_path(@tweet),{class: "good mb-2"} do %>いいね
+      <i class="fas fa-heart"></i><%= @tweet.likes.count %>
     <% end %>
-  </div>
+  <% end %>
+  <p>いいねをしたユーザー</p><br>
+  <% @tweet.liked_users.each do |user|%>
+    <%= link_to "#{user.nickname}","/mypages/#{user.id}" %><br>
+  <% end %>
   <%# コメント %>
   <div class="comment-content">
     <div class="comment">   
