--- a/app/views/users/_likes.html.erb
+++ b/app/views/users/_likes.html.erb
@@ -1,29 +1,30 @@
 <div class="text-format mb-5 pt-5 text-warning">
   いいねした試合記事
 </div>
-<% @likes.each do |like|%>
-  <% tweet = Tweet.find_by(id: like.tweet_id) %>
-  <%= link_to tweet do %>
-  <div class="article mt-5">
-    <div class="article-title">
-      <%= tweet.school_a.name %>
-      vs
-      <%= tweet.school_b.name %>
+<div class="my-post-list">
+  <% @likes.each do |like|%>
+    <% tweet = Tweet.find_by(id: like.tweet_id) %>
+    <div class="my-article mt-5">
+      <%= link_to tweet do %>
+        <div class="article-title">
+          <%= tweet.school_a.name %>
+          vs
+          <%= tweet.school_b.name %>
+        </div>
+        <div class="article-image">
+          <i class="fa fa-baseball-ball text-white"></i>
+        </div>
+        <div class="sub-title">
+          <%= tweet.title_info %>
+        </div>
+        <div class="name">
+          <span>投稿者</span>
+          <%= tweet.user.nickname %>
+        </div>
+        <div class="tweets_at">
+          <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
+        </div>
+      <% end %>
     </div>
-    <div class="article-image">
-      <i class="fa fa-baseball-ball text-white"></i>
-    </div>
-    <div class="sub-title">
-      <%= tweet.title_info %>
-    </div>
-    <div class="name">
-      <span>投稿者</span>
-      <%= tweet.user.nickname %>
-    </div>
-    <div class="tweets_at">
-      <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
-    </div>
-  </div>
   <% end %>
-<% end %>
-<%= paginate @likes%>
+</div>
