--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "予想ページへ戻る",forecasts_path,class: "return-btn" %>
   </div>
   <div class="user_name">
-    <h5>投稿者 <%= link_to "#{@forecast.user.nickname}","/mypages/#{@forecast.user_id}"%></h5>
+    <h5>投稿者 <%= link_to "#{@forecast.user.nickname}","/users/#{@forecast.user_id}"%></h5>
   </div>
   <div class="content-fcs_show">
     <div class="text-format text-danger mt-5 mb-5">
