部分テンプレート　ファイル移動

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,9 +54,9 @@
           <label class="tab" for="tab4">いいねした試合記事</label>
         </div>
         <ul class="contents">
-          <li v-if="isActive === '1' "><%= render partial: "mypages/my_tweet"%></li>
-          <li v-else-if="isActive === '2' "><%= render partial: "mypages/my_analysis" %></li>
-          <li v-else-if="isActive === '3' "><%= render partial: "mypages/my_forecast"%></li>
+          <li v-if="isActive === '1' "><%= render partial: "my_tweets"%></li>
+          <li v-else-if="isActive === '2' "><%= render partial: "my_analyses" %></li>
+          <li v-else-if="isActive === '3' "><%= render partial: "my_forecasts"%></li>
           <Li v-else-if="isActive === '4' "><%= render partial: "users/likes"%></li>
         </ul>
       </div>
