--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -105,6 +105,12 @@
   text-align: center;
   margin: 0 auto;
   width: 10%;
+  &-btn {
+    width: 10%;
+    margin: 0 auto;
+    color: white;
+    margin-bottom: 2%;
+  }
 }
 
 /* new */
