--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -1,11 +1,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js">
 </script>
 <div class="main-content-btn">
-  <%= link_to "投稿する",new_champion_path,class: "send_btn ml-3 mt-3" %>
-  <%= link_to "予想一覧へ戻る","/tournaments/#{@category.id}/watch_fcs",class: "return-top mt-3" %>
+  <%= link_to "予想一覧へ戻る","/tournaments/#{@category.id}/watch_fcs",class: "return-top  ml-1 mt-3" %>
 </div>
-<div class="text-format">
-  <%= @category.name %>
+<div class="text-center">
+  <% if @my_champion.blank?%>
+    <%= link_to new_champion_path(tournament_id: params[:id]),class: "btn btn-warning champ-btn" do %>
+      優勝予想をする
+    <% end %>
+    <p>投票は1回限りです</p>
+    <div class="text-format">
+      <%= @category.name %>
+    </div>
+  <% else%>
+    <%= link_to "記事を削除する","/champions/#{@my_champion.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
+    <p>投票済み</p>
+  <% end %>
 </div>
 <% @category_parent_array.each do |tournament|%>
 <%# 大会別 %>
