--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mypage-content pt-3">
-  <%= link_to "戻る",'javascript:history.back()',class: "return-top ml-2" %>
+  <%# <%= link_to "戻る",'javascript:history.back()',class: "return-top ml-2" %> 
   <%= link_to "トップページへ戻る",root_path,class: "return-top-mypage"%>
   <%= link_to "ユーザー一覧",users_path,class: "users-btn" %>
   <% if @user.id == current_user.id %>
