プロフィール　画像

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -4,4 +4,10 @@
     text-align: center;
     margin-top: 10%;
   }
+  &-image {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
 }
