--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,7 @@
   <% end %>
   <%# プロフィール %>
   <div class="myprof">
+    <%= image_tag "#{@user.image}",class: "user-image mt-5" %>
     <div class="residence">
       <p>住んでる場所</p>
       <br><%= @user.prefecture %> 
