--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
             <% if user.image.present?%>
               <%= link_to image_tag("#{user.image}",class: "user-icon mt-3"),"users/#{user.id}" %>
             <% else %>
-              <%= image_tag "no-image.png",class: "user-icon mt-3" %>
+              <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"users/#{user.id}" %>
             <% end %>
           </th>
           <th class="user-list-name"><%= link_to "#{user.nickname}","users/#{user.id}" %></th>
