画像　ボタンの位置

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
     <% if @user.image.present?%>
       <%= image_tag "#{@user.image}",class: "user-image mt-5" %>
     <% else %>
-      <%= image_tag "no-image.png",class: "user-icon mt-3" %>
+      <%= image_tag "no-image.png",class: "user-image mt-5" %>
     <% end %>
     <div class="residence">
       <p>住んでる場所</p>
