--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -12,6 +12,8 @@
     width: 200px;
     height: 200px;
     object-fit: cover;
+    border: solid;
+    border-color: #acafc3;
   }
   &-icon {
     border-radius: 50%;
