--- a/app/views/users/_stats.html.erb
+++ b/app/views/users/_stats.html.erb
@@ -1,5 +1,5 @@
  <% @user ||= current_user %>
-<div class="stats">
+<div class="stats mb-5">
   <i class="fas fa-user-friends text-info"></i>
   <a href="<%= following_user_path(@user) %>">
     <strong id="following" class="stat">
@@ -7,6 +7,7 @@
     </strong>
     フォロー
   </a>
+  <i class="fas fa-user-friends text-info"></i>
   <a href="<%= followers_user_path(@user) %>">
     <strong id="followers" class="stat">
       <%= @user.followers.count %>
