--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -9,6 +9,11 @@
   </div>
   <div class="user_name">
     <h5>投稿者 <%= link_to "#{@analysis.user.nickname}","/users/#{@analysis.user_id}"%></h5>
+    <% if @user.image.present?%>
+      <%= link_to image_tag("#{@user.image}",class: "user-icon mt-2"),"users/#{@user.id}" %>
+    <% else %>
+      <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"users/#{@user.id}" %>
+    <% end %>
   </div>
   <div class="content-fcs_show">
     <div class="text-format mt-5 text-success">
