--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -2,6 +2,7 @@
   <div class="containe_r p-4">
     <%= form_with model: @map, local: true do |f| %>
     <%= f.text_field :address,placeholder: "住所",class: "game_title",value: "#{@map.address}" %>
+    <%= f.text_area :text,placeholder: "紹介",value: "#{@map.text}" %>
     <%= f.collection_select :school_id, @school, :id, :name%>
     <%=f.submit value: "SENT",class: "game_record" %>
   <% end %>
