--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -4,7 +4,8 @@
     <%= f.text_field :address,placeholder: "住所",class: "game_title",value: "#{@map.address}" %>
     <%= f.text_area :text,placeholder: "紹介",value: "#{@map.text}" %>
     <%= f.collection_select :school_id, @school, :id, :name%>
-    <%=f.submit value: "SENT",class: "game_record" %>
+    <%= f.hidden_field  :tournament_id,value: @tournament.id %>
+    <%= f.submit value: "SENT",class: "game_record" %>
   <% end %>
   </div>
 </div>
