みんなの削除

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
           <input type="radio" id="tab1" class="tab-switch" value="1" v-model="isActive">
           <label class="tab" for="tab1">投稿した試合記事</label>
           <input type="radio" id="tab2" class="tab-switch" value="2" v-model="isActive">
-          <label class="tab" for="tab2">投稿した試合分析</label>
+          <label class="tab" for="tab2">投稿した戦力分析</label>
           <input type="radio" id="tab3" class="tab-switch" value="3" v-model="isActive">
           <label class="tab" for="tab3">投稿した試合予想</label>
           <input type="radio" id="tab4" class="tab-switch" value="4" v-model="isActive">
