住所　紹介文

--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -32,19 +32,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Address:</strong>
+  <strong>住所:</strong>
   <%= @map.address %>
 </p>
-
-<p>
-  <strong>Latitude:</strong>
-  <%= @map.latitude %>
-</p>
-
-<p>
-  <strong>Longitude:</strong>
-  <%= @map.longitude %>
-</p>
+<%= @map.text %>
 
 <style type="text/css">
   #map { height: 400px;
