--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -2,9 +2,10 @@
   margin-top: 10%;
   &-list {
     margin-top: 10%;
-    &-name {
-      vertical-align: middle;
-      padding: 2em;
+    display: flex;
+    text-align: center;
+    &_name {
+      
     }
   }
   &-image {
@@ -23,22 +24,8 @@
     border: solid;
     border-color: #acafc3;
   }
-  &-text {
-    vertical-align: middle;
-    text-align: center;
-  }
-}
-
-table {
-  width: 100%;
-  table-layout: fixed;
-}
-
-table td {
-  overflow-wrap : break-word;
 }
 
 .users-content {
   /*word-break: break-all;*/
-  padding: 0 550px;
 }
