--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,8 @@
-<div class="users-content">
+<div class="user-content pt-5">
   <h2>参加ユーザー</h2>
   <div class="user-list row">
     <% @users.each do |user| %>
-      <%# <table class="tablecell mt-5"> %>
-      <div class="col-xs-12 col-md-6 col-lg-3 mt-3">
+      <div class="col-xs-12 col-md-6 col-lg-3 mt-3 card">
         <div class="user-list-image">
           <% if user.image.present?%>
             <%= link_to image_tag("#{user.image}",class: "user-icon mt-3"),"users/#{user.id}" %>
@@ -13,7 +12,7 @@
         </div>
         <div class="user-list_body">
           <div class="user-list_name mt-5">
-            <%= link_to "#{user.nickname}","users/#{user.id}" %>
+            <%= link_to "#{user.nickname}","users/#{user.id}",class: "user-name" %>
           </div>
           <div class="user-list_text mt-5">
             <%= "#{user.text}".truncate(15) %>
@@ -21,7 +20,7 @@
               <p>自己紹介未記入</p>
             <% end %>
           </div>
-          <div class="user-address mt-5">
+          <div class="user-address mt-5 pb-3">
             <%= user.prefecture %>
             <% unless user.prefecture.present? %>
               <p>未選択</p>
@@ -31,4 +30,5 @@
       </div>
     <% end %>
   </div>
+  <%= paginate @users %>
 </div>
