--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="user-list_body">
         <div class="user-list_name mt-5">
-          <%= link_to "#{user.nickname}","users/#{user.id}",class: "user-name" %>
+          <%= link_to "#{user.nickname}","/users/#{user.id}",class: "user-name" %>
         </div>
         <div class="user-list_text mt-5">
           <%= "#{user.text}".truncate(15) %>
