--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -3,9 +3,9 @@
     <div class="col-xs-12 col-md-6 col-lg-3 mt-3 card">
       <div class="user-list-image">
         <% if user.image.present?%>
-          <%= link_to image_tag("#{user.image}",class: "user-icon mt-3"),"users/#{user.id}" %>
+          <%= link_to image_tag("#{user.image}",class: "user-icon mt-3"),"/users/#{user.id}" %>
         <% else %>
-          <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"users/#{user.id}" %>
+          <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"/users/#{user.id}" %>
         <% end %>
       </div>
       <div class="user-list_body">
