--- a/app/assets/stylesheets/room.scss
+++ b/app/assets/stylesheets/room.scss
@@ -1,10 +1,98 @@
+.room-content {
+  background-color: #EEFFFF;
+  min-height: 100%;
+}
+
 .user-in{
   text-align:center;
   border:1px solid darkgray;
-  background-color:gainsboro;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #EEFFFF;
+  // list-style-type: none;
+  z-index: 3;
 }
 .dmMain{
   padding:30px;
-  border:1px solid darkgray;
-  background-color:gainsboro;
+  padding-bottom: 10%;
+}
+
+.room-member {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.messages,.my-messages {
+  display: flex;
+}
+
+.my-messages {
+  margin-left: 70%;
+}
+
+.message {
+  position: relative;
+  // display: inline-block;
+  margin: 1.4em 0 1.4em 15px;
+  padding-top: 1%;
+  min-width: 8%;
+  max-width: 100%;
+  font-size: 16px;
+  background: rgb(192, 189, 189);
+  // box-sizing: border-box;
+  border-radius: 15px;
+  text-align: center;
+  &-input {
+    width: 40%;
+    margin: 0 auto;
+    padding-bottom: 2%;
+  }
+  &-form {
+    display: flex;
+    height: 10%;
+  }
+  &-btn {
+    width: 10%;
+    background-color: #38aef0;
+    color: white;
+    border: none;
+  }
+}
+
+.message:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -15px;
+  margin-top: -8px;
+  border: 8px solid transparent;
+  border-right: 8px solid  rgb(192, 189, 189);
+  z-index: 2;
+}
+
+.my-message {
+  position: relative;
+  // display: inline-block;
+  margin: 1.4em 0 1.4em 15px;
+  padding: 3% 0% 3% 0%;
+  min-width: 30%;
+  max-width: 100%;
+  font-size: 16px;
+  background: #38aef0;
+  // box-sizing: border-box;
+  border-radius: 15px;
+  text-align: center;
+  color: white;
+}
+
+.my-message:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 99%;
+  margin-top: -5px;
+  border: 5px solid transparent;
+  border-left: 5px solid #38aef0;
+  z-index: 2;
 }
