--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -3,7 +3,7 @@
   height: 100%;
 }
 
-.edit-article,.return-btn,.return-top,.return-top-mypage,.return-btn_watch,.return-fcs,.users-btn {
+.edit-article,.return-btn,.return-top,.return-top-mypage,.return-btn_watch,.return-fcs,.users-btn,.dm-btn {
   padding: 5px;
   color: #fff;
   border-top: 4px solid #48ecc4;
