--- a/app/assets/stylesheets/room.scss
+++ b/app/assets/stylesheets/room.scss
@@ -21,6 +21,8 @@
 .room-member {
   display: inline-flex;
   flex-direction: column;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 .messages,.my-messages {
@@ -95,4 +97,10 @@
   border: 5px solid transparent;
   border-left: 5px solid #38aef0;
   z-index: 2;
+}
+
+.room-user-icon {
+  height: 50%;
+  width: 50%;
+  border-radius: 50%;
 }
