map一覧　デザイン

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
  @import "./tournament";
  @import "./follow";
  @import "./champion";
- @import "./user"
+ @import "./user";
+ @import "./maps";
 
 
