--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,3 +1,27 @@
-// Place all the styles related to the maps controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.map{
+  &-content {
+  background-color: #f6f6d1;
+  min-height: 100%;
+  }
+  &-card {
+  border: none;
+  background-color: #f6f6d1;
+  font-weight: bold;
+  }
+  &-user{
+    background-color: white;
+    &_icon {
+      width: 55px;
+      height: 50px;
+      border-radius: 50%;
+    }
+    &_image {
+      background-color: white;
+    }
+  }
+  &-list {
+    margin-top: 10%;
+    display: flex;
+    text-align: center;
+  }
+}
