--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,4 +1,5 @@
 <div class="room-content">
+    <div class="return-dm pt-3 ml-1"><%= link_to "DM一覧へ",rooms_path,class: "return-btn" %></div>
   <div class="user-in">
     <% @member.each do |member| %>
       <div class="room-member mr-5 pt-2">
